app/styles/_style.scss
#Header {
  background: $section-bg;
  position: fixed;
  top: 0;
  left: auto;
  right: auto;
  z-index: 999;
  width: 100%;

  .navbar-default {
    background: none;
    border: none;
    margin-bottom: 0;
    @include border-radius(0);

    .navbar-header {
      margin: 0;
      padding: 20px 0;
      @media (min-width: $width-sm) {
        float: none;
      }
      @media (min-width: $width-md) {
        padding: 25px 0;
      }
      .logo {
        display: block;
        float: left;
        color: $white;
        letter-spacing: 5px;
        font-family: $Raleway;
        font-weight: $bold;
        font-size: 30px;
        @media (min-width: $width-sm) {
          float: left;
        }
      }
      .navbar-toggle {
        border: none;
        height: 27px;
        width: 20px;
        margin: 0;
        padding: 0;
        display: block;
        position: relative;
        @include border-radius(0);
        .icon-bar {
          background: $white;
          margin-left: auto;
          margin-right: auto;
          width: 25px;
          height: 3px;
          + .icon-bar {
            margin-top: 4px;
          }
          &.top-bar {
            transform: rotate(0);
          }
          &.middle-bar {
            opacity: 1;
          }
          &.bottom-bar {
            transform: rotate(0);
          }
        }
        &:focus, &:hover {
          background: none;
        }
        &.menu-active {
          .icon-bar {
            &.top-bar {
              transform: rotate(45deg);
              transform-origin: 10% 10%;
            }
            &.middle-bar {
              opacity: 0;
            }
            &.bottom-bar {
              transform: rotate(-45deg);
              transform-origin: 10% 90%;
            }
          }
        }
        @media (min-width: $width-md) {
          display: none;
        }
      }

      .items-right {
        float: right;
        #DesktopMenu {
          display: inline-block;
          vertical-align: top;
          margin-right: 60px;
          ul {
            padding-left: 0;
            margin-bottom: 0;
            li {
              float: left;
              margin-right: 30px;
              @media (min-width: $width-md) {
                @media (max-width: $width-lg) {
                  margin-right: 18px;
                }
              }
              &:last-child {
                margin-right: 0;
              }
              position: relative;
              a {
                color: $white;
                font-family: $OpenSans;
                font-size: 11px;
                letter-spacing: 3px;
                line-height: 19px;
                text-align: center;
                text-transform: uppercase;
                font-weight: 400;

              }
            }
          }
        }

        .utility {
          display: inline-block;
          vertical-align: top;
          a {
            color: $white;
            font-weight: 300;
            font-size: 20px;
          }
        }
      }
    }
    .cbp-spmenu {
      background: $grey;
      position: fixed;
      padding: 0;
      margin: 0 !important;
      overflow: auto !important;
      display: block;
      visibility: visible;
      border-top: 0 none;
      height: 100% !important;

      &.cbp-spmenu-vertical {
        &.navbar-collapse {
          @media (min-width: $width-sm) {
            width: 240px;
          }
          @media (min-width: $width-lg) {
            width: 0;
          }
        }
        .utility {
          form {
            fieldset {
              .form-group {
                position: relative;
                margin-bottom: 0;
                .txt {
                  border: 1px solid $white;
                  @include border-radius(0);
                  box-shadow: none;
                  color: $grey;
                  font-size: 14px;
                  height: 45px;
                  line-height: 45px;
                  padding-right: 40px;
                }
                button {
                  background: none;
                  border: none;
                  position: absolute;
                  right: 15px;
                  top: 8px;
                  padding: 0;

                  span {
                    color: $grey;
                    font-size: 20px;
                  }
                }
              }
            }
          }
        }
        .mp-menu {
          border-top: 1px solid rgba(176,176,176,1);
          position: absolute;
          top: 45px;
          left: 0;
          z-index: 1;
          height: 100%;
          right: 0;
          @include transform(none);
          width: 100%;

          ul {
            padding-left: 0;
            li {
              a {
                border-bottom: 1px solid rgba(176,176,176,1);
                color: $white;
                font-family: $OpenSans;
                font-size: 11px;
                letter-spacing: 3px;
                line-height: 19px;
                text-align: center;
                text-transform: uppercase;
                font-weight: 400;

                &:active, &:focus, &:hover {
                  background: none;
                }
              }
            }
          }
        }
      }
    }
    
  }

  &.affix {
    background: $white;
    @include box-shadow(0px, 1px, 2px, 0px, rgba(71, 80, 92, 0.2));
    z-index: 10;

    .navbar-default {
      .navbar-header {
        .navbar-toggle {
          .icon-bar {
            background: $ash;
          }
        }
        .logo {
          color: $ash;
        }
        .items-right {
          #DesktopMenu {
            ul {
              li {
                a {
                  color: $ash;
                }
              }
            }
          }
          .utility {
            a {
              color: $ash;
            }
          }
        }
      }
    }

  }
}

.section-banner {
  padding-bottom: 63px;
  position: relative;


  .section-content {
    padding: 100px 0;
    @media (min-width: $width-lg) {
      padding: 180px 0 300px;
    }
    @media (min-width: $width-md) {
      max-width: 652px;
      margin: 0 auto;
    }
    text-align: center;
    h5 {
      margin-bottom: 16px;
    }
    h1 {
      color: $white;
      margin-bottom: 23px;
    }
    p {
      color: $white;
      font-size: 16px;
      line-height: 20px;
    }
  }
  .btn-scroll {
    color: $white;
    font-size: 30px;
    position: absolute;
    bottom: 63px;
    left: 50%;
    @include transform(translateY(50%));
  }
}

.section-intro {
  padding: 75px 0 90px;
  .section-content {
    max-width: 900px;
    margin: 0 auto;
    h2 {
      margin-bottom: 30px;
    }
  }
}
.section-services {
  padding: 0;

  .image-col {
    background-image: url(../images/services-bg.jpg);
    background-repeat: no-repeat;
    background-size: cover;
    background-position: top center;
    min-height: 300px;

    @media (min-width: $width-sm) {
      min-height: 400px;
    }
  }
  .content-col {
    background-color: #f5f5f5;
    padding: 50px 30px;

    @media (min-width: $width-sm) {
      padding: 70px 80px;
    }
    @media (min-width: $width-lg) {
      padding: 131px 80px;
    }
    h2 {
      margin-bottom: 33px;
    }
  }
}

.section-portfolio {
  .section-head {
    h2 {
      margin-bottom: 33px;
    }
    p {
      margin-bottom: 45px;
    }
    .navigation {
      text-align: center;

      li {
        display: inline-block;
        padding: 0 5px;
        @media (min-width: $width-sm) {
          margin-right: 34px;
        }
        @media (min-width: $width-md) {
          margin-right: 44px;
        }
        &:last-child {
          @media (min-width: $width-sm) {
            margin-right: 0;
          }
        }
        &.active {
          a {
            border-bottom: 2px solid $blue;
          }
        }
        a {
          color: $blue;
          font-family: $Raleway;
          font-weight: $bold;
          letter-spacing: 3px;
          line-height: 11px;
          font-size: 11px;
          text-transform: uppercase;
          padding-bottom: 5px;
          &:hover, &:focus {
            border-bottom: 2px solid $blue;
          }
        }
      }
    }
  }
  .masonry-items {
    margin-top: 50px;
    -webkit-column-count:1;
    -moz-column-count:1;
    column-count: 1;
    -webkit-column-gap: 0;
    -moz-column-gap: 0;
    column-gap: 0;
    @media (min-width: $width-xs) {
      -webkit-column-count:2;
      -moz-column-count:2;
      column-count: 2;
    }
    @media (min-width: $width-sm) {
      -webkit-column-count:2;
      -moz-column-count:2;
      column-count: 2;
    }
    @media (min-width: $width-md) {
      -webkit-column-count:4;
      -moz-column-count:4;
      column-count: 4;
    }

    /*.item-sizer {
      width: 100%;
      @media (min-width: $width-sm) {
        width: 25%
      }
    }*/
    .item {
      width: 100%;
      float: left;
      img {
        max-width: 100%;
        width: 100%;
        height: inherit;
      }
      &.item-height-large {
        height: 500px;

      }
      &.item-height-medium {
        height: 400px;

      }
      &.item-height-small {
        height: 300px;

      }
    }
  }
}

